--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ ipython==5.4.1
 ipython-genutils==0.2.0
 jmespath==0.9.3
 pathlib2==2.3.0
-peewee==2.10.1
 pexpect==4.2.1
 pickleshare==0.7.4
 progressbar==2.3
@@ -24,3 +23,5 @@ simplegeneric==0.8.1
 six==1.10.0
 traitlets==4.3.2
 wcwidth==0.1.7
+peewee
+pyyaml
