Clean up requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,9 @@
-appnope==0.1.0
-backports.shutil-get-terminal-size==1.0.0
+python_hosts==0.4.0
+watchdog==0.8.3
+peewee==2.10.1
+pytz==2017.2
 boto3==1.4.4
-botocore==1.5.80
-decorator==4.0.11
-docutils==0.13.1
-enum34==1.1.6
-futures==3.1.1
-ipython==5.4.1
-ipython-genutils==0.2.0
-jmespath==0.9.3
-pathlib2==2.3.0
-pexpect==4.2.1
-pickleshare==0.7.4
-progressbar==2.3
-prompt-toolkit==1.0.14
-ptyprocess==0.5.2
-Pygments==2.2.0
-python-dateutil==2.6.0
-s3transfer==0.1.10
-scandir==1.5
-simplegeneric==0.8.1
-six==1.10.0
-traitlets==4.3.2
-wcwidth==0.1.7
-peewee
-pyyaml
-python-hosts
+stormssh==0.6.9
+Fabric==1.13.2
+storm==0.20
+PyYAML==3.12
