--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,48 @@ stormssh==0.6.9
 Fabric==1.13.2
 storm==0.20
 PyYAML==3.12
+argh==0.26.2
+asn1crypto==0.22.0
+bcrypt==3.1.3
+boto3==1.4.4
+botocore==1.5.95
+certifi==2017.7.27.1
+cffi==1.10.0
+chardet==3.0.4
+click==6.7
+cryptography==2.0.3
+docutils==0.14
+enum34==1.1.6
+Fabric==1.13.2
+Flask==0.12.2
+futures==3.1.1
+idna==2.6
+ipaddress==1.0.18
+itsdangerous==0.24
+Jinja2==2.9.6
+jmespath==0.9.3
+MarkupSafe==1.0
+paramiko==2.2.1
+pathtools==0.1.2
+peewee==2.10.1
+pkginfo==1.4.1
+pyasn1==0.3.2
+pycparser==2.18
+PyNaCl==1.1.2
+python-dateutil==2.6.1
+python-hosts==0.4.0
+pytz==2017.2
+PyYAML==3.12
+requests==2.18.4
+requests-toolbelt==0.8.0
+s3transfer==0.1.10
+six==1.10.0
+storm==0.20
+stormssh==0.6.9
+termcolor==1.1.0
+tqdm==4.15.0
+twine==1.9.1
+urllib3==1.22
+watchdog==0.8.3
+Werkzeug==0.12.2
+win-inet-pton==1.0.1
